<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmasActivity"
    >


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mis_alarmas"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/red"
            android:text="@string/ver_calendario"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_alarmas"
            android:iconifiedByDefault="false"
            android:layout_margin="12dp"
            android:queryHint="@string/filtrar_medicamento" />

        <ExpandableListView
            android:id="@+id/listViewAlarmas"
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:layoutDirection="rtl" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">


                <Button
                    android:id="@+id/buttonVolver"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"

                    android:layout_margin="6dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/volver"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonCrearAlarma"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"

                    android:layout_margin="6dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/crear_alarma"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />




        </LinearLayout>




</LinearLayout>